# second-brain

./: .gitignore  CLAUDE.md  Justfile  docker-compose.yml  pyproject.toml  pyrightconfig.json  ruff.toml
apps/backend/: .dockerignore  .env.template  alembic.ini  pyproject.toml  pytest.ini
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial_schema.py  002_drop_source_session_fk.py
apps/backend/src/second_brain/: config.py  main.py  utils.py
apps/backend/src/second_brain/api/: schemas.py
apps/backend/src/second_brain/db/: models.py  pool.py  session.py
apps/backend/src/second_brain/graphs/: ingestion_graph.py  query_graph.py  state.py
apps/backend/src/second_brain/nodes/: ingestion_agent.py  memory_agent.py  memory_persistence.py  memory_retrieval.py  orchestrator.py  pick_file.py  pii_redaction.py  rag_retrieval.py  synthesis.py  web_research.py
apps/backend/src/second_brain/services/: pii.py  (+3 more)
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: test_ingestion_graph.py  test_memory_system.py  test_migration.py  test_query_graph.py
apps/backend/tests/unit/: conftest.py  test_app_routes.py  test_health.py  test_main.py  test_models.py  test_query_router.py  test_state_and_config.py  test_state_types.py  test_utils.py
apps/eval/: .env.template  README.md  baseline.py  compare.py  generate_dataset.py  pyproject.toml  pytest.ini  ragas_client.py  run_eval.py  schema.py
apps/eval/dataset/: .gitignore
apps/eval/results/: .gitignore
apps/eval/tests/unit/: conftest.py  test_baseline.py  test_compare.py  test_generate_dataset.py  test_ragas_client.py  test_run_eval.py  test_schema.py  test_smoke.py
(+425 files in other folders)
