[project]
name = "second-brain-eval"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ragas>=0.2.0,<0.5",  # ragas 0.4.x needs langchain 0.x ecosystem
    "langchain-ollama>=0.3.0",
    "psycopg[binary]>=3.1.0",
    "second-brain",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.uv.sources]
second-brain = { workspace = true }
